2010-05-01  Evan Stade  <estade@chromium.org>

Reviewed by David Levin.

        [chromium] Skia needs to fade DragImages
        https://bugs.webkit.org/show_bug.cgi?id=38008

        tested by DragImageTest

        * platform/chromium/DragImageChromiumSkia.cpp:
        (WebCore::dissolveDragImageToFraction):implement
        (WebCore::createDragImageFromImage):deep copy instead of shallow
2010-05-01  Evan Stade  <estade@chromium.org>

        Reviewed by David Levin

        [chromium] Skia needs to fade DragImages
        https://bugs.webkit.org/show_bug.cgi?id=38008

        * tests/DragImageTest.cpp:
        (DragImageTest.CreateDragImage): test that the drag image is a deep copy

Canonical link: https://commits.webkit.org/49896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58641 268f45cc-cd09-0410-ab3c-d52691b4dbfc