WebCore/platform/chromium/DragImageChromiumSkia.cpp
@@ -68,9 +68,26 @@ DragImageRef scaleDragImage(DragImageRef image, FloatSize scale)
     return scaledImage;
 }
 
-DragImageRef dissolveDragImageToFraction(DragImageRef image, float)
+DragImageRef dissolveDragImageToFraction(DragImageRef image, float fraction)
 {
-    notImplemented();
+    if (!image)
+        return 0;
+
+    image->setIsOpaque(false);
+    image->lockPixels();
+
+    for (int row = 0; row < image->height(); ++row) {
+        for (int column = 0; column < image->width(); ++column) {
+            uint32_t* pixel = image->getAddr32(column, row);
+            *pixel = SkPreMultiplyARGB(SkColorGetA(*pixel) * fraction,
+                                       SkColorGetR(*pixel),
+                                       SkColorGetG(*pixel),
+                                       SkColorGetB(*pixel));
+        }
+    }
+
+    image->unlockPixels();
+
     return image;
 }
 
@@ -80,7 +97,12 @@ DragImageRef createDragImageFromImage(Image* image)
         return 0;
 
     NativeImageSkia* bitmap = image->nativeImageForCurrentFrame();
-    return bitmap ? new SkBitmap(*bitmap) : 0;
+    if (!bitmap)
+        return 0;
+
+    SkBitmap* dragImage = new SkBitmap();
+    bitmap->copyTo(dragImage, SkBitmap::kARGB_8888_Config);
+    return dragImage;
 }
 
 DragImageRef createDragImageIconForCachedImage(CachedImage*)
